--- a/styles.css
+++ b/styles.css
@@ -6,21 +6,22 @@ body {
 }
 
 .outer-container {
-    height: 450px; 
-    width: 360px; 
+    height: 350px; 
+    width: 270px; 
     background-color:lightgrey; 
     border-radius: 8px;
     padding-top: 24px; 
-    padding-left: 24px;
-    padding-right: 24px; 
+    padding-left: 16px;
+    padding-right: 16px; 
 }
 
 .display {
-    height: 84px; 
+    height: 80px; 
     border-radius: 9px;
     background-color: #4d88ff;
     padding: 24px; 
     text-align: right;
+    margin-bottom: 12px; 
 }
 
 p {
@@ -29,24 +30,23 @@ p {
 
 .row-container {
     display: flex; 
-    width: 360px; 
+    width: 270px; 
     justify-content: space-between;
 }
 
 .bottom-container {
-    height: 315px; 
+    height: 200px; 
     display: flex;
     flex-wrap: wrap;
     align-content: space-around;
 }
 
 button {
-    height: 54px;
-    width: 60px; 
+    height: 42px;
+    width: 50px; 
     border-radius: 12px; 
     font-size: 20px;
 }
-
 
 
 .equation {
